@@ -100,7 +100,7 @@ class ContentModelCategories extends JModel
 				$params->loadJSON($active->params);
 			}
 			$options = array();
-			$options['countItems'] = $params->get('show_item_count', 0) || !$params->get('show_empty_categories', 0);
+			$options['countItems'] = $params->get('show_cat_num_articles', 0) || !$params->get('show_empty_categories', 0);
 			$categories = JCategories::getInstance('Content', $options);
 			$this->_parent = $categories->get($this->getState('filter.parentId', 'root'));
 			if(is_object($this->_parent))
