@@ -30,6 +30,7 @@ $ -> Language fix or change
 28-Jul-2010 Jean-Marie Simonet
  # [#21605] small change in menu manager: new menu item. Thanks Bill.
  # [#21584] Robots metadata useless Option
+ # [#21569] article categories - not showing no of articles in each category. Thanks Bill.
 
 27-Jul-2010 Ian MacLennan
  # [#21578] mod_articles_popular Ordering Correction
